--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,20 @@
         <maven.compiler.target>20</maven.compiler.target>
         <exec.mainClass>com.employeemanagementsystem.EmployeeManagementSystem</exec.mainClass>
     </properties>
+    <name>CoffeeManagementSystem</name>
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.30</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE125</version>
+        </dependency>
+        
+    </dependencies>
 </project>
